--- a/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
+++ b/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -70,14 +70,19 @@
         </CheckBox>
 
         <Button fx:id="calculateButton" layoutX="254.0" layoutY="370.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="APSKAIČIUOTI" />
-        <Button fx:id="clearButton" layoutX="429.0" layoutY="370.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; onaction -fx-font-family: Verdana; -fx-font-weight: bold;" text="ANULIUOTI" />
-      <LineChart fx:id="graph" layoutX="630.0" layoutY="67.0" visible="false">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
+        <Button fx:id="clearButton" layoutX="429.0" layoutY="370.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="ANULIUOTI" />
+      <VBox layoutX="588.0" layoutY="66.0" prefHeight="357.0" prefWidth="480.0">
+         <children>
+            <TableView fx:id="dataTable" prefHeight="360.0" prefWidth="480.0" style="-fx-background-color: orange;" visible="false">
+              <columns>
+                <TableColumn fx:id="menuo" editable="false" prefWidth="52.7999267578125" text="Mėnuo" />
+                <TableColumn fx:id="menesineImoka" editable="false" prefWidth="100.0" text="Mėnesinė įmoka" />
+                  <TableColumn fx:id="pagrindineDalis" editable="false" prefWidth="104.00006103515625" text="Pagrindinė dalis" />
+                  <TableColumn fx:id="palukanuDalis" editable="false" prefWidth="89.60015869140625" text="Palūkanų dalis" />
+                  <TableColumn fx:id="likusiSuma" editable="false" minWidth="0.0" prefWidth="136.0" text="Likusi paskolos suma" />
+              </columns>
+            </TableView>
+         </children>
+      </VBox>
     </children>
 </AnchorPane>
