--- a/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
+++ b/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
@@ -11,11 +11,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="base" prefHeight="408.0" prefWidth="1067.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crew.mif.loancalculator.CalcController">
+<AnchorPane fx:id="base" prefHeight="536.0" prefWidth="1054.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crew.mif.loancalculator.CalcController">
     <children>
         <BorderPane layoutX="-73.0" prefHeight="67.0" prefWidth="1220.0" style="-fx-background-color: ORANGE;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <center>
@@ -71,18 +70,14 @@
 
         <Button fx:id="calculateButton" layoutX="254.0" layoutY="370.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="APSKAIČIUOTI" />
         <Button fx:id="clearButton" layoutX="429.0" layoutY="370.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="ANULIUOTI" />
-      <VBox layoutX="588.0" layoutY="66.0" prefHeight="357.0" prefWidth="480.0">
-         <children>
-            <TableView fx:id="dataTable" prefHeight="360.0" prefWidth="480.0" style="-fx-background-color: orange;" visible="false">
-              <columns>
-                <TableColumn fx:id="menuo" editable="false" prefWidth="52.7999267578125" text="Mėnuo" />
-                <TableColumn fx:id="menesineImoka" editable="false" prefWidth="100.0" text="Mėnesinė įmoka" />
-                  <TableColumn fx:id="pagrindineDalis" editable="false" prefWidth="104.00006103515625" text="Pagrindinė dalis" />
-                  <TableColumn fx:id="palukanuDalis" editable="false" prefWidth="89.60015869140625" text="Palūkanų dalis" />
-                  <TableColumn fx:id="likusiSuma" editable="false" minWidth="0.0" prefWidth="136.0" text="Likusi paskolos suma" />
-              </columns>
-            </TableView>
-         </children>
-      </VBox>
+      <TableView fx:id="dataTable" layoutX="641.0" layoutY="69.0" prefHeight="360.0" prefWidth="480.0" style="-fx-background-color: orange;" AnchorPane.bottomAnchor="107.19999999999999" AnchorPane.topAnchor="69.0" visible="false">
+         <columns>
+            <TableColumn fx:id="menuo" editable="false" prefWidth="52.7999267578125" text="Mėnuo" />
+            <TableColumn fx:id="menesineImoka" editable="false" prefWidth="100.0" text="Mėnesinė įmoka" />
+            <TableColumn fx:id="pagrindineDalis" editable="false" prefWidth="104.00006103515625" text="Pagrindinė dalis" />
+            <TableColumn fx:id="palukanuDalis" editable="false" prefWidth="89.60015869140625" text="Palūkanų dalis" />
+            <TableColumn fx:id="likusiSuma" editable="false" minWidth="0.0" prefWidth="136.0" text="Likusi paskolos suma" />
+         </columns>
+      </TableView>
     </children>
 </AnchorPane>
