--- a/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
+++ b/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -14,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="base" prefHeight="536.0" prefWidth="1054.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crew.mif.loancalculator.CalcController">
+<AnchorPane fx:id="base" prefHeight="1200.0" prefWidth="1980.0" style="-fx-background-color: BLACK;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crew.mif.loancalculator.CalcController">
     <children>
         <BorderPane layoutX="-73.0" prefHeight="67.0" prefWidth="1220.0" style="-fx-background-color: ORANGE;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <center>
@@ -25,31 +28,31 @@
                 </Text>
             </center>
         </BorderPane>
-        <Label layoutX="26.0" layoutY="87.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: ORANGE;" text="PASKOLOS SUMA:" textAlignment="CENTER">
+        <Label layoutX="26.0" layoutY="107.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: ORANGE;" text="PASKOLOS SUMA:" textAlignment="CENTER">
             <font>
                 <Font name="Franklin Gothic Heavy" size="18.0" />
             </font>
         </Label>
-        <TextField fx:id="loanAmount" layoutX="248.0" layoutY="87.0" prefHeight="36.0" prefWidth="250.0" promptText="EUROS" style="-fx-background-color: WHITE;" />
-        <Label layoutX="26.0" layoutY="153.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: ORANGE;" text="PASKOLOS TERMINAS:">
+        <TextField fx:id="loanAmount" layoutX="248.0" layoutY="107.0" prefHeight="36.0" prefWidth="250.0" promptText="EUROS" style="-fx-background-color: WHITE;" />
+        <Label layoutX="26.0" layoutY="173.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: ORANGE;" text="PASKOLOS TERMINAS:">
             <font>
                 <Font name="Franklin Gothic Heavy" size="18.0" />
             </font>
         </Label>
-        <TextField fx:id="timeYears" layoutX="248.0" layoutY="153.0" prefHeight="33.0" prefWidth="74.0" promptText="YEARS" style="-fx-background-color: WHITE;" />
-        <TextField fx:id="timeMonths" layoutX="350.0" layoutY="153.0" prefHeight="33.0" prefWidth="74.0" promptText="MONTHS" style="-fx-background-color: WHITE;" />
-      <Label layoutX="26.0" layoutY="219.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: orange;" text="METINIS PROCENTAS">
+        <TextField fx:id="timeYears" layoutX="248.0" layoutY="173.0" prefHeight="33.0" prefWidth="74.0" promptText="YEARS" style="-fx-background-color: WHITE;" />
+        <TextField fx:id="timeMonths" layoutX="350.0" layoutY="173.0" prefHeight="33.0" prefWidth="74.0" promptText="MONTHS" style="-fx-background-color: WHITE;" />
+      <Label layoutX="26.0" layoutY="239.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: orange;" text="METINIS PROCENTAS">
          <font>
             <Font name="Franklin Gothic Heavy" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="interestRate" layoutX="248.0" layoutY="219.0" prefHeight="36.0" prefWidth="250.0" promptText="\%" style="-fx-background-color: white;" />
-        <Label layoutX="26.0" layoutY="285.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: orange;" text="GRĄŽINIMO METODAS:">
+      <TextField fx:id="interestRate" layoutX="248.0" layoutY="239.0" prefHeight="36.0" prefWidth="250.0" promptText="\%" style="-fx-background-color: white;" />
+        <Label layoutX="26.0" layoutY="305.0" prefHeight="36.0" prefWidth="214.0" style="-fx-text-fill: orange;" text="GRĄŽINIMO METODAS:">
             <font>
                 <Font name="Franklin Gothic Heavy Italic" size="18.0" />
             </font>
         </Label>
-      <HBox layoutX="248.0" layoutY="285.0" prefHeight="36.0" prefWidth="381.0">
+      <HBox layoutX="248.0" layoutY="305.0" prefHeight="36.0" prefWidth="381.0">
          <children>
             <RadioButton fx:id="anuitetoButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="104.0" style="-fx-text-fill: orange; -fx-font-family: verdana; -fx-font-weight: bold;" text="Anuiteto">
                <font>
@@ -62,15 +65,15 @@
             <RadioButton fx:id="linijinisButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="101.0" style="-fx-text-fill: orange; -fx-font-family: verdana; -fx-font-weight: bold;" text="Linijinis" toggleGroup="$paymentMethodGroup" />
          </children>
       </HBox>
-        <CheckBox fx:id="showGraphs" layoutX="42.0" layoutY="386.0" mnemonicParsing="false" selected="true" style="-fx-text-fill: orange;" text="RODYTI GRAFUS">
+        <CheckBox fx:id="showGraphs" layoutX="42.0" layoutY="406.0" mnemonicParsing="false" selected="true" style="-fx-text-fill: orange;" text="RODYTI GRAFUS">
             <font>
                 <Font name="Franklin Gothic Heavy" size="18.0" />
             </font>
         </CheckBox>
 
-        <Button fx:id="calculateButton" layoutX="254.0" layoutY="370.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="APSKAIČIUOTI" />
-        <Button fx:id="clearButton" layoutX="429.0" layoutY="370.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="ANULIUOTI" />
-      <TableView fx:id="dataTable" layoutX="641.0" layoutY="69.0" prefHeight="360.0" prefWidth="480.0" style="-fx-background-color: orange;" AnchorPane.bottomAnchor="107.19999999999999" AnchorPane.topAnchor="69.0" visible="false">
+        <Button fx:id="calculateButton" layoutX="254.0" layoutY="390.0" mnemonicParsing="false" onAction="#handleCalculate" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="APSKAIČIUOTI" />
+        <Button fx:id="clearButton" layoutX="429.0" layoutY="390.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="ANULIUOTI" />
+      <TableView fx:id="dataTable" layoutX="641.0" layoutY="69.0" prefHeight="360.0" prefWidth="480.0" style="-fx-background-color: orange;" AnchorPane.bottomAnchor="107.19999999999999" AnchorPane.topAnchor="69.0">
          <columns>
             <TableColumn fx:id="menuo" editable="false" prefWidth="52.7999267578125" text="Mėnuo" />
             <TableColumn fx:id="menesineImoka" editable="false" prefWidth="100.0" text="Mėnesinė įmoka" />
@@ -79,5 +82,13 @@
             <TableColumn fx:id="likusiSuma" editable="false" minWidth="0.0" prefWidth="136.0" text="Likusi paskolos suma" />
          </columns>
       </TableView>
+      <LineChart layoutX="26.0" layoutY="546.0" style="-fx-background-color: orange;" title="Mokėjimo Grafikas">
+        <xAxis>
+          <CategoryAxis fx:id="monthAxis" label="Months" side="BOTTOM" style="-fx-tick-label-fill: orange;" tickLabelFill="#dc7908" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis fx:id="paymentAxis" label="Payments" side="LEFT" />
+        </yAxis>
+      </LineChart>
     </children>
 </AnchorPane>
