Added jar file and added save function

--- a/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
+++ b/src/main/resources/com/crew/mif/loancalculator/hello-view.fxml
@@ -72,7 +72,7 @@
 
         <Button fx:id="calculateButton" layoutX="254.0" layoutY="390.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="APSKAIČIUOTI" />
         <Button fx:id="clearButton" layoutX="429.0" layoutY="390.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="ANULIUOTI" />
-      <TableView fx:id="dataTable" layoutX="633.0" layoutY="69.0" prefHeight="571.0" prefWidth="478.0" style="-fx-background-color: orange;" visible="false" AnchorPane.bottomAnchor="107.0" AnchorPane.topAnchor="69.0">
+      <TableView fx:id="dataTable" layoutX="633.0" layoutY="69.0" prefHeight="571.0" prefWidth="478.0" style="-fx-background-color: orange;" AnchorPane.bottomAnchor="107.0" AnchorPane.topAnchor="69.0">
          <columns>
             <TableColumn fx:id="menuo" editable="false" prefWidth="52.7999267578125" text="Mėnuo" />
             <TableColumn fx:id="menesineImoka" editable="false" prefWidth="100.0" text="Mėnesinė įmoka" />
@@ -81,7 +81,7 @@
             <TableColumn fx:id="likusiSuma" editable="false" minWidth="0.0" prefWidth="136.0" text="Likusi paskolos suma" />
          </columns>
       </TableView>
-      <LineChart fx:id="mokejimoGrafikas" layoutX="26.0" layoutY="451.0" prefHeight="294.0" prefWidth="538.0" style="-fx-background-color: orange;" title="Mokėjimo Grafikas" visible="false">
+      <LineChart fx:id="mokejimoGrafikas" layoutX="26.0" layoutY="451.0" prefHeight="294.0" prefWidth="538.0" style="-fx-background-color: orange;" title="Mokėjimo Grafikas">
         <xAxis>
           <NumberAxis fx:id="monthAxis" label="Months" side="BOTTOM" style="-fx-tick-label-fill: orange;" tickLabelFill="#dc7908" tickMarkVisible="false" />
         </xAxis>
@@ -89,5 +89,10 @@
           <NumberAxis fx:id="paymentAxis" label="Payments" side="LEFT" />
         </yAxis>
       </LineChart>
+      <HBox layoutX="772.0" layoutY="657.0" prefHeight="73.0" prefWidth="200.0" style="-fx-alignment: center;">
+         <children>
+            <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="IŠSAUGOTI" />
+         </children>
+      </HBox>
     </children>
 </AnchorPane>
