--- a/src/main/resources/com/crew/mif/loancalculator/mokejimoLentele.fxml
+++ b/src/main/resources/com/crew/mif/loancalculator/mokejimoLentele.fxml
@@ -22,7 +22,7 @@
             </Text>
          </center>
       </BorderPane>
-      <TableView fx:id="dataTable" editable="false" layoutY="67.0" prefHeight="460.0" prefWidth="478.0" style="-fx-background-color: orange;" AnchorPane.bottomAnchor="223.4000000000001" AnchorPane.topAnchor="67.0">
+      <TableView fx:id="dataTable" editable="false" layoutY="67.0" prefHeight="460.0" prefWidth="473.0" style="-fx-background-color: orange;" AnchorPane.bottomAnchor="223.0" AnchorPane.topAnchor="67.0">
          <columns>
             <TableColumn fx:id="menuo" editable="false" prefWidth="52.7999267578125" text="Mėnuo" />
             <TableColumn fx:id="menesineImoka" editable="false" prefWidth="100.0" text="Mėnesinė įmoka" />
@@ -31,7 +31,7 @@
             <TableColumn fx:id="likusiSuma" editable="false" minWidth="0.0" prefWidth="136.0" text="Likusi paskolos suma" />
          </columns>
       </TableView>
-      <LineChart fx:id="mokejimoGrafikas" layoutX="478.0" layoutY="67.0" prefHeight="460.0" prefWidth="538.0" style="-fx-background-color: orange;" title="Mokėjimo Grafikas" visible="false">
+      <LineChart fx:id="mokejimoGrafikas" layoutX="478.0" layoutY="67.0" prefHeight="460.0" prefWidth="538.0" style="-fx-background-color: black;" title="Mokėjimo Grafikas" visible="false">
          <xAxis>
             <NumberAxis fx:id="monthAxis" label="Mėnesiai" side="BOTTOM" style="-fx-tick-label-fill: orange;" tickLabelFill="#dc7908" tickMarkVisible="false" />
          </xAxis>
