--- a/src/main/resources/com/crew/mif/loancalculator/mokejimoLentele.fxml
+++ b/src/main/resources/com/crew/mif/loancalculator/mokejimoLentele.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -39,10 +43,36 @@
             <NumberAxis fx:id="paymentAxis" label="Mokėjimai" side="LEFT" />
          </yAxis>
       </LineChart>
-      <HBox layoutX="411.0" layoutY="648.0" prefHeight="73.0" prefWidth="200.0" style="-fx-alignment: center;">
+      <HBox layoutX="408.0" layoutY="662.0" prefHeight="73.0" prefWidth="200.0" style="-fx-alignment: center;">
          <children>
-            <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="IŠSAUGOTI" />
+            <Button fx:id="saveButton" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="IŠSAUGOTI">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin></Button>
          </children>
       </HBox>
+      <VBox layoutY="527.0" prefHeight="200.0" prefWidth="381.0" style="-fx-alignment: center;">
+         <children>
+            <CheckBox fx:id="filterOn" mnemonicParsing="false" prefHeight="25.0" prefWidth="177.0" style="-fx-text-fill: orange;" text="Filtruoti">
+               <font>
+                  <Font name="Franklin Gothic Heavy" size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </CheckBox>
+            <ComboBox fx:id="monthsFrom" disable="true" prefWidth="150.0" promptText="from" visible="false">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ComboBox>
+            <ComboBox fx:id="monthsTo" disable="true" prefWidth="150.0" promptText="to" visible="false">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ComboBox>
+            <Button fx:id="filterButton" mnemonicParsing="false" prefHeight="51.0" prefWidth="133.0" style="-fx-background-color: orange; -fx-font-family: Verdana; -fx-font-weight: bold;" text="FILTRUOTI" />
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
